--- a/net/dsa/Kconfig
+++ b/net/dsa/Kconfig
@@ -153,4 +153,10 @@ config NET_DSA_TAG_XRS700X
 	  Say Y or M if you want to enable support for tagging frames for
 	  Arrow SpeedChips XRS700x switches that use a single byte tag trailer.
 
+config NET_DSA_TAG_MAXLINEAR
+	tristate "Tag driver for MaxLinear GSW switches"
+	help
+	  Say Y or M if you want to enable support for tagging frames for the
+	  MaxLinear GSW switches.
+
 endif
